# JAEAsort

./: Overview_helpfile.txt  Overview_helpfile.txt~  compress.txt
nikirootV2/: Makefile  Makefile_old  README  README~  macro_nikiroot.C  nikiwrapped
nikirootV2/example_files/: channellist.txt  commands.txt  ffiles.txt  run.sh
nikirootV2/include/: buffertemplate.h  core_nikiroot.h  nikirootinc.h
nikirootV2/src/: buffertemplate.cxx  core_nikiroot.cxx  nikirootinc.cxx  wrapper.cpp
nikirootV3/: README
nikirootV3.5/: Makefile  README
nikirootV3.5/example_files/: channellist.txt  ffiles.txt  macro_nikiroot.C  (+1 more)
root_sort/: experiment.C  run.C
root_sort/rangelibrary/source/: INSTALL.Debian  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
root_sort/rangelibrary/source/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
root_sort/rangelibrary/source/debian/: changelog  control  copyright  range-dev.README.Debian  range-dev.examples  range-dev.install  range-dev.links  range-dev.manpages  range.README.Debian  range.install  range.links  range.manpages  rules
root_sort/rangelibrary/source/doc/: Makefile  Makefile.in  README
root_sort/rangelibrary/source/examples/: Makefile  Makefile.am  Makefile.ex  Makefile.in  passage.c  testRange.C
root_sort/rangelibrary/source/man/: Makefile  Makefile.am  Makefile.in  range.1  range.3
root_sort/rangelibrary/source/src/: Makefile  Makefile.am  Makefile.in  range.c  range.h  ranges.c
root_sort/rangelibrary/source/src/.deps/: range.Po  ranges.Plo
(+29 files in other folders)
